// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput component matches snapshot (default) 1`] = `
<Fragment>
  <div
    className="fdsTextInput-root"
  >
    <DecoratedInput>
      <IconInput>
        <input
          className="fdsTextInput"
          onChange={[Function]}
          type="text"
        />
      </IconInput>
    </DecoratedInput>
  </div>
</Fragment>
`;

exports[`TextInput component matches snapshot (default) 2`] = `
<Fragment>
  <label
    className="fdsTextInput-root"
  >
    <div
      className="fdsTextInput-label"
    >
      label
      <span
        className="color--red"
      >
         *
      </span>
    </div>
    <DecoratedInput
      after="after"
      before="before"
    >
      <IconInput
        IconLeft={[Function]}
        IconRight={[Function]}
      >
        <input
          className="fdsTextInput"
          onChange={[Function]}
          type="number"
        />
      </IconInput>
    </DecoratedInput>
  </label>
  <div
    className="color--red type--data"
  >
    errorText
  </div>
</Fragment>
`;
